--- a/OpenGLCookBook/SimpleCamera/SimpleCamera.vcxproj
+++ b/OpenGLCookBook/SimpleCamera/SimpleCamera.vcxproj
@@ -64,7 +64,7 @@
       <AdditionalDependencies>glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy $(ProjectDir)shaders  $(OutDir)shaders  /Y</Command>
+      <Command>xcopy $(ProjectDir)shaders  $(OutDir)shaders /e  /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
