--- a/OpenGLCookBook/SubdivisionGeometryShaderInstanced/SubdivisionGeometryShaderInstanced.vcxproj
+++ b/OpenGLCookBook/SubdivisionGeometryShaderInstanced/SubdivisionGeometryShaderInstanced.vcxproj
@@ -64,6 +64,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy $(ProjectDir)shaders  $(OutDir)shaders  /e /Y</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
