--- a/OpenGLCookBook/TargetCamera/TargetCamera.vcxproj.filters
+++ b/OpenGLCookBook/TargetCamera/TargetCamera.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Plane.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TexturedPlane.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Plane.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TexturedPlane.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
