--- a/OpenGLCookBook/TargetCamera/TargetCamera.vcxproj.filters
+++ b/OpenGLCookBook/TargetCamera/TargetCamera.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="TexturedPlane.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RenderableObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
